    Spagnoletti)

- FPM:
  . Fixed bug #77934 (php-fpm kill -USR2 not working). (Jakub Zelenka)
  . Fixed bug #77921 (static.php.net doesn't work anymore). (Peter Kokot)

- GD:
  . Fixed bug #77943 (imageantialias($image, false); does not work). (cmb)

- JSON:
  . Fixed bug #77843 (Use after free with json serializer). (Nikita)

- PDO_MySQL:
  . Fixed bug #77944 (Wrong meta pdo_type for bigint on LLP64). (cmb)

- Reflection:
  . Fixed bug #75186 (Inconsistent reflection of Closure:::__invoke()). (Nikita)

- Session:
  . Fixed bug #77911 (Wrong warning for session.sid_bits_per_character). (cmb)

- SOAP:
  . Fixed bug #77945 (Segmentation fault when constructing SoapClient with
    WSDL_CACHE_BOTH). (Nikita)

- SPL:
  . Fixed bug #77024 (SplFileObject::__toString() may return array). (Craig
    Duncan)

- Standard:
  . Fixed bug #77931 (Warning for array_map mentions wrong type). (Nikita)
  . Fixed bug #78003 (strip_tags output change since PHP 7.3). (cmb)

02 May 2019, PHP 7.3.5

- Core:
  . Fixed bug #77903 (ArrayIterator stops iterating after offsetSet call).
    (Nikita)

- CLI:
  . Fixed bug #77794 (Incorrect Date header format in built-in server).
    (kelunik)

- EXIF
  . Fixed bug #77950 (Heap-buffer-overflow in _estrndup via exif_process_IFD_TAG).
    (CVE-2019-11036) (Stas)

- Interbase:
  . Fixed bug #72175 (Impossibility of creating multiple connections to
    Interbase with php 7.x). (Nikita)

- Intl:
  . Fixed bug #77895 (IntlDateFormatter::create fails in strict mode if $locale
    = null). (Nikita)

- LDAP:
  . Fixed bug #77869 (Core dump when using server controls) (mcmic)

- Mail
  . Fixed bug #77821 (Potential heap corruption in TSendMail()). (cmb)

- mbstring:
  . Implemented FR #72777 (Implement regex stack limits for mbregex functions).
    (Yasuo Ohgaki, Stas)

- MySQLi:
  . Fixed bug #77773 (Unbuffered queries leak memory - MySQLi / mysqlnd).
    (Nikita)

- PCRE:
  . Fixed bug #77827 (preg_match does not ignore \r in regex flags). (requinix,